--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "devDependencies": {
+    "script-loader": "^0.7.2",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
+  },
+  "scripts": {
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open"
   },
   "name": "raytracing",
   "version": "1.0.0",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "lodash": "^4.17.11",
+    "p5": "^0.8.0"
+  }
 }
